2001-02-23  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_replace_image): We are #XstPartitionType aware.
	(xst_boot_parse_images): We too!

2001-02-22  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in (xst_network_get_pap_passwd): get the pap password from a pap-secrets file.
	  The tag name for dialing dialers passwords is now password, not passwd.
	* parse.pl.in: don't use @_ to pass arguments: it's difficult to know the required args
	  for the function. xst_parse_sh now unquotes the value.
	* replace.pl.in (xst_replace_sh): quote value and surround by quotes if required, before replacing.
	
2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_scan_recurse) (xst_xml_scan_make_kid_array):
	  Allow [0-9] in tag names.

2001-02-22  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_set): Added some more known tags.

2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in (xst_report): Re-enable report printing. It works.

	* shares-conf.in (xml_print): Move to xst_xml_quote ().

2001-02-22  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_replace_image): Now we can delete image tags too.

2001-02-22  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_quote): Put old code back in, since Chema's
	  didn't work.

2001-02-22  Chema Celorio  <chema@celorio.com>

	* boot-conf.in (xml_print_globals): fix s/quote/xst_xml_quote
	so that Crimz can stop crying like a baby

2001-02-21  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_set, xst_network_rh62_interface_delete,
	  xst_network_remove_pap_entry): remove interfaces that are not present, and remove
	  pap entry if the interface used one, for security.
	* network.pl.in (xst_network_remove_pap_entry): used when a ppp interface is removed,
	  for security.
	  (xst_network_rh62_interface_delete): entry removal in rh62ish machines.
	  DNS1 and DNS2 support in tables.
	